# soulstruct

./: .bumpversion.cfg  .gitignore  CHANGELOG.md  README.md  SoulstructProjectEditor.spec  _test_mesh_splitter.py  build_exe.cmd  build_soulstruct_exe.cmd  pyproject.toml  setup.py
doa_scraps/: doa_dsr_merge.py  translation_text.py
emevd/: __init__.py  constants.py  ds_types.py  emevd_parser.py  evs_parser.py  example_constants.py  instructions.py  tests.py  tests.pyi  verbose.py
examples/: compile_example.py  example.evs  example.py  example_constants.py  example_evs.emevd  example_evs.evs  example_evs.numeric.txt  example_evs.py  example_evs.verbose.txt  example_with_comments.py
pydses/: animation.py  boss.py  chr.py  cutscene.py  event.py  event_enums.py  event_writer.py  extra_enums.py  flags.py  game.py  hitboxes.py  items.py  light.py  map.py  messages.py  navimesh.py  network.py  objects.py  sfx.py  sound.py  spawner.py  warp.py
scripts/: binderpack.cmd  binderunpack.cmd  restorebak.cmd  ssipy.cmd  sspy.cmd  tpfpack.cmd  tpfunpack.cmd  undcx.cmd
soulstruct/: __init__.py  __main__.py  _config.py  _logging.py  _test_mesh_splitter.py  bnd.py  config.py  core.py  create_paramdef_info.py  dcx.py  exceptions.py  game_file.py  games.py  hotkeys.py  logging_utils.py  project.py  start.py  utilities.py
soulstruct/ai/: __init__.py  core.py  dark_souls_ai_scripts.py
soulstruct/base/: base_binary_file.py  binder_entry.py  game_file.py  game_file_directory.py
soulstruct/bloodborne/: __init__.py
soulstruct/bnd/: core.py  magic.py
soulstruct/constants/: utilities.py
soulstruct/containers/: __init__.py  base.py  binder_hash.py  binder_types.py  bxf.py  core.py  dcx.py  dds.py  entry.py  flags.py  oodle.py  tpf.py
soulstruct/darksouls1ptde/: __init__.py  camera_vibration.py  constants.py  models.py
soulstruct/darksouls1r/: constants.py  models.py
soulstruct/darksouls3/: __init__.py
soulstruct/dcx/: __init__.py  core.py  oodle.py
soulstruct/demonssouls/: constants.py
soulstruct/eldenring/: constants.py
soulstruct/emevd/: __init__.py  constants.py  core.py  decompiler.py  ds_types.py  emevd_parser.py  evs_parser.py  example_constants.py  game_types.py  instructions.py  tests.py  tests.pyi  utilities.py  verbose.py
soulstruct/enums/: bloodborne.py  darksouls1.py  darksouls3.py  shared.py
soulstruct/esd/: __init__.py  _structs.py  bb.py  core.py  dark_souls_talk.py  ds1ptd.py  ds1ptde.py  ds1r.py  ds2.py  ds3.py  errors.py  esp.py  ezl_parser.py  functions.py  functions.pyi
soulstruct/events/: __init__.py  base.py  core.py  emevd_parser.py  evs.py  evs_parser.py  internal.py  numeric.py  utilities.py
soulstruct/fmg/: __init__.py  core.py  dark_souls_text.py  ds_text.py
soulstruct/game_types/: __init__.py  animation_types.py  basic_types.py  internal_types.py  item_types.py  misc_types.py  msb_types.py  param_types.py  sound_types.py  text_types.py
soulstruct/maps/: __init__.py  base.py  core.py  dark_souls_maps.py  enums.py  events.py  models.py  msb.py  navmesh.py  parts.py  regions.py  utilities.py
soulstruct/models/: darksouls1.py
soulstruct/param/: __init__.py  core.py  dark_souls_game_params.py  fields.py  parambnd.py  paramdef.py
soulstruct/params/: __init__.py  core.py  dark_souls_params.py  enums.py  field_types.py  fields.py  links.py  param_field_japanese_descriptions.txt  paramdef.py  utilities.py
soulstruct/project/: __init__.py  actions.py  ai.py  core.py  editor.py  entities.py  events.py  files.json  icon.py  lighting.py  links.py  maps.py  params.py  runtime.py  talk.py  text.py  utilities.py  window.py
soulstruct/text/: __init__.py  dark_souls_text.py  fmg.py
soulstruct/types/: basic_types.py  item_types.py  msb_types.py  sound_types.py  text_types.py
soulstruct/utilities/: __init__.py  add_draw_slots.py  binary.py  binary_struct.py  compare_draw_params.py  conversion.py  core.py  edit_bonfire_warp_list.py  files.py  future.py  game_selector.py  inspection.py  kernel32.py  maths.py  (+6 more)
tests/: _test_mesh_splitter.py  test_dsr_text.py
(+3639 files in other folders)
