[project]
name = "soulstruct"
description = "Inspect and mod FromSoftware games."
readme = "README.md"
version = "2.0.0"
license = "GPL-3.0-or-later"
requires-python = ">=3.11"  # maximum allowed for Blender 4.4 support
keywords = ["modding", "FromSoftware", "Dark Souls", "Bloodborne", "Elden Ring", "Sekiro", "Demon's Souls"]
classifiers = [
    "Programming Language :: Python :: 3",
]
authors = [
    { name = "Scott Mooney (Grimrukh)", email = "grimrukh@gmail.com" }
]

dependencies = [
    "constrata",    # required for binary read/write (my package)
    "numpy",        # required for math classes/operations
    "rich>=13",     # required for nice printing/logging
    "typer",        # required for CLI
    "zstandard",    # required for ZSTD compression (Elden Ring regulation DCX)
]

[project.optional-dependencies]
runtime       = ["psutil"]
graphs        = ["matplotlib"]
sound         = ["pydub"]

[project.scripts]
soulstruct = "soulstruct.__main__:app"

[project.urls]
homepage      = "https://github.com/Grimrukh/soulstruct"
repository    = "https://github.com/Grimrukh/soulstruct"
"Issues"      = "https://github.com/Grimrukh/soulstruct/issues"
